// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ContentStateIcon ui empty 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state empty"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          add
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          contrast
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          photo
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          folder_open
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          laptop
        </i>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      title
    </span>
    <span
      class="d-block fs-6 text-dark mb-3"
    >
      subtitle
    </span>
  </div>
</div>
`;

exports[`Component: ContentStateIcon ui error 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state error"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          add
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          contrast
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          photo
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          folder_open
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          sentiment_very_dissatisfied
        </i>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      title
    </span>
    <span
      class="d-block fs-6 text-dark mb-3"
    >
      subtitle
    </span>
  </div>
</div>
`;

exports[`Component: ContentStateIcon ui loading 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state loading"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          add
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          contrast
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          photo
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          folder_open
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <svg
          class="spinner mb-2"
          height="75"
          viewBox="25 25 50 50"
          width="75"
        >
          <circle
            class="path"
            cx="50"
            cy="50"
            fill="none"
            r="20"
            stroke="#f0ad4e"
            stroke-miterlimit="10"
            stroke-width="4"
          />
        </svg>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Component: ContentStateIcon ui no-results 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state no-results"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          add
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          contrast
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          photo
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          folder_open
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          search
        </i>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      title
    </span>
    <span
      class="d-block fs-6 text-dark mb-3"
    >
      subtitle
    </span>
  </div>
</div>
`;

exports[`Component: ContentStateIcon ui with children 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state error"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          add
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          contrast
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          photo
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          folder_open
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons material-icons__filled"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <i
          class="icon material-icons material-icons__filled"
        >
          sentiment_very_dissatisfied
        </i>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      title
    </span>
    <span
      class="d-block fs-6 text-dark mb-3"
    >
      subtitle
    </span>
    <p>
      Children
    </p>
  </div>
</div>
`;
